--- a/VytheeFirst/WebApplication1/WebApplication1.csproj
+++ b/VytheeFirst/WebApplication1/WebApplication1.csproj
@@ -1,7 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
+    <!--<TypeScriptCompileBlocked>true</TypeScriptCompileBlocked>-->    
   </PropertyGroup>
 
   <PropertyGroup>
@@ -17,6 +18,9 @@
   </ItemGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="1.0.1" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="wwwroot\lib\angular\" />
   </ItemGroup>
 
 </Project>
